<resources>
    <string name="app_name">HoopSpot</string>
    <string name="to_describe_poster_image_of_file">dercribe RV Image</string>
    <string name="placeName">Place Name</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="parkName">Parking Name</string>
    <string name="park_address">park address</string>
    <string name="placeBoard">Place     :</string>

    <string name="sloganApp">Helping you to find parking spot</string>
    <string name="appTitle">HoopSpot</string>
    <string name="available_parking_area_for_this_place">Available Parking Area For This Place :</string>
    <string name="image_parkir_list">Image parkir list</string>
    <string name="spot">Spot</string>
    <string name="availableText">Available Spot :</string>
    <string name="splash_image">splash image</string>
    <string name="image_title">Image Title</string>
</resources>